--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,20 @@
-.routing-example {
-  font: normal 14px sans-serif;
-  margin: 15px;
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-column-gap: 10px;
-    a {
-      background-color: lightgrey;
-      padding: 5px 10px;
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      border-radius: 4px;
-    }
-  }
+.login {
+  position: absolute;
+  right: 120px;
+}
+.signup {
+  position: absolute;
+  right: 20px;
+}
+.padding {
+  margin-right: 20px;
+}
+.margin {
+  margin-left: 10px;
+}
+.formWidth {
+  width: 200px;
+}
+hr {
+  size: 10px;
 }
